<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="input_email_hint">Please enter a email</string>
    <string name="input_email_hint2">Please enter your email in the form of @</string>
    <string name="input_pw_hint">Password (8-15 alpha/numeric/special characters)</string>
    <string name="input_pw_hint2">Please enter the password</string>
    <string name="input_pw_hint_retry">Please re-enter the password</string>
    <string name="btn_auth">Auth</string>
    <string name="btn_auth_confirm">Confirm</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_passwd_reset">Password Reset</string>
    <string name="phone_not_match_tip">email is not right</string>
    <string name="password_not_match_tip">Please input your password</string>
    <string name="network_error">Unable to connect to network</string>
    <string name="login_error">Can not Login. Please check ID/PW</string>
    <string name="login_server_error">Can not login to server</string>
</resources>