<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nav_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_login_title"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="141dp"
            android:layout_height="204dp"
            android:scaleType="centerInside"
            android:src="@drawable/login_logo"></ImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_logo"
        android:visibility="visible"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="21.5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            style="@style/BaseEdit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_idpw_btn_layout"
            android:hint="@string/input_email_hint"
            android:paddingLeft="21sp">
        </EditText>

        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="21sp"
            android:text="@string/input_email_hint2"
            android:textColor="@color/BaseTitleText">
        </TextView>

        <EditText
            android:id="@+id/et_password"
            style="@style/BaseEdit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_idpw_btn_layout"
            android:hint="@string/input_pw_hint"
            android:inputType="textPassword"
            android:paddingLeft="21sp">
        </EditText>

        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="21sp"
            android:text="@string/input_pw_hint2"
            android:textColor="@color/BaseTitleText">
        </TextView>

        <LinearLayout
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/user_module_bg_commit_button_press"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textColor="@color/c43"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/btn_register"
                android:textColor="@color/lc_demo_color_ffffff"
                android:textSize="12dp" />
            <TextView
                android:id="@+id/user_passwd_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/btn_passwd_reset"
                android:textColor="@color/lc_demo_color_ffffff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>